[package]
name = "sea-breeze"
version = "0.1.0"
authors = ["Jonatan Borkowski <jonatan@thebo.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", fuatures  = [ "esp32s3", "async", "integrated-timers" ] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.7.1", features = [
    "esp32s3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "embassy-net",
    "async"
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-time = "0.3.1"
embassy-time-driver = { version = "0.1.0", features = [ "tick-hz-1_000_000" ] }
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers","executor-thread"] }
embassy-sync = "0.6.0"
embedded-hal = { version = "1.0.0" }
embassy-net = { version = "0.4.0", features = ["medium-ip", "tcp", "medium-ethernet", "dhcpv4", "log", "udp"] }
esp-hal-embassy = { version = "0.2", features = ["esp32s3"] }

embedded-hal-async = "1.0.0-rc.1"
embassy-net-driver = "0.2.0"
embedded-io-async = { version = "0.6.0" }

serde_json = { version = "1.0.120", features = ["alloc"], default-features = false }
embedded-graphics = "0.8.1"
mipidsi = { git = "https://github.com/almindor/mipidsi.git", rev= "7ff5271" }
display-interface-parallel-gpio = "0.7.0"
tinygif = "0.0.4"
static_cell = { version="2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
